--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="main.css">
+<svg width="960" height="600"></svg>
 <script type="text/javascript" src="async.js"></script>
 <script src="DestinyAPI.js"></script>
+<script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="main.js"></script>
