--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 <svg width="960" height="600"></svg>
 <script type="text/javascript" src="async.js"></script>
 <script src="DestinyAPI.js"></script>
+<script src="PriorityQueue.js"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="main.js"></script>
