--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <script src="DestinyAPI.js"></script>
 <script src="PriorityQueue.js"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
+<script src="d3-tip.js"></script>
 <script src="NetworkCrawler.js"></script>
 <script src="main.js"></script>
