Priority queue list visualized and updated

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="main.css">
-<svg width="960" height="600"></svg>
+<div id="window">
+  <svg width="960" height="600"></svg>
+  <div id="priorityList"></div>
+</div>
 <script type="text/javascript" src="async.js"></script>
 <script src="DestinyAPI.js"></script>
 <script src="PriorityQueue.js"></script>
