--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
   <svg width="960" height="600"></svg>
   <div id="priorityList"></div>
 </div>
+<!-- <script type="text/javascript" src="require.js"></script> -->
 <script type="text/javascript" src="async.js"></script>
+<script src="LocalAPI.js"></script>
 <script src="DestinyAPI.js"></script>
 <script src="PriorityQueue.js"></script>
 <script src="https://d3js.org/d3.v4.min.js"></script>
